KubernetesTest-main/apps/servicex/requestauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: servicex-jwt
  namespace: servicex
spec:
  selector:
    matchLabels:
      app: servicex
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.20/security/tools/jwt/samples/jwks.json"
