KubernetesTest-main/apps/servicex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicex
  namespace: servicex
spec:
  selector:
    app: servicex
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
