KubernetesTest-main/apps/servicex/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicex-gateway
  namespace: servicex
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "servicex.cb-interview.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cb-tls
    hosts:
    - "servicex.cb-interview.com"
    tls:
      httpsRedirect: true
